<resources>
    <string name="app_name">Nirbheek</string>
    <string name="sign_in_forgot_pass_text">Forgot Password ?</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="welcome_to_nirbheek">Welcome to Nirbheek</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_in_or_text">OR</string>
    <string name="sign_up_to_safety">Sign Up to Your Safety</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_hint">Phone</string>
    <string name="already_have_account">Already have an account ? Sign In</string>
    <string name="implementation_in_progress">Implementation in Progress</string>
    <string name="logo_desc">logo</string>
    <string name="forgot_pass_text">Forgot Password</string>
    <string name="forgot_reset_pass_text">Enter your email to reset password</string>
    <string name="email_hint">Email</string>
    <string name="forgot_button_text">Submit</string>
    <string name="password_hint">Password</string>
    <string name="nav_home">Home</string>
    <string name="nav_trusted_contacts">Trusted Contacts</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_fake_call">Fake Call</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bottom_sos">SOS</string>
    <string name="nav_bottom_track_me">Track Me</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Send Feedback</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="developer_error_msg">The application is misconfigured.</string>
    <string name="api_not_connected_msg">The client attempted to call a method from an API that failed to connect.</string>
    <string name="error_msg">The operation failed with no more detailed information.</string>
    <string name="internal_error_msg">An internal error occurred.</string>
    <string name="invalid_account_msg">Invalid account name specified.</string>
    <string name="sign_in_required_msg">Please Sign In to continue.</string>
    <string name="OK">OK</string>
    <string name="loading_msg">Loading</string>
    <string name="email_required_msg">Email Required</string>
    <string name="enter_email_msg">Enter Email Address</string>
    <string name="password_required_msg">Password Required</string>
    <string name="enter_password_msg">Enter Password</string>
    <string name="name_required_msg">Name Required</string>
    <string name="enter_name_msg">Enter your Full Name</string>
    <string name="phone_required_msg">Phone Number Required</string>
    <string name="enter_phone_msg">Enter Phone Number</string>
    <string name="valid_phone_required_msg">Valid Phone Number Required</string>
    <string name="enter_valid_phone_msg">Enter 10 digit Valid Phone Number</string>
    <string name="error_message">Error Message</string>
    <string name="creating_account">Creating Account</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="account_creation_success">Account Created Successfully</string>
    <string name="processing">Processing</string>
    <string name="login_success">Login Successful</string>

    <!--Fake Call Fragment-->
    <string name="fake_call_label">Tap the button to receive a fake call in 1 min.</string>

    <!-- PageIntro Activity -->
    <string name="pager_next">NEXT</string>
    <string name="pager_skip">SKIP</string>
    <string name="nirbheek_logo_content_description">Nirbheek Logo</string>
    <string name="welcome_text_view">Welcome to Nirbheek</string>

    <!-- Account Activity -->
    <string name="general_label">General</string>
    <string name="advance_label">Advance</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="update_button">Update</string>
    <string name="change_password_button">Change Password</string>

    <!-- Settings Activity -->
    <string-array name="settings_item_array">
        <item>Account</item>
        <item>Trusted Contacts</item>
        <item>Siren - Sound</item>
        <item>Gestures</item>
        <item>Language</item>
        <item>Help and FAQs</item>
        <item>About</item>
    </string-array>

    <!-- About Activity -->
    <string-array name="about_item_array">
        <item>App Name</item>
        <item>Version</item>
        <item>GitHub</item>
        <item>License</item>
        <item>Open source licenses</item>
    </string-array>

    <string-array name="about_item_secondary_array">
        <item>Nirbheek</item>
        <item>0.1.8</item>
        <item>https://goo.gl/PJ5xCb</item>
        <item>MIT</item>
        <item>Open source licenses</item>
    </string-array>

    <!--Other string resources-->
    <!--Long placeholder for testing purpose [CHAR LIMIT == NO, Multiple line]-->
    <string name="label_placeholder_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!--Short placeholder for testing purpose [CHAR LIMIT == 50, Single line]-->
    <string name="label_placeholder_short">Placeholder</string>
    <!--A toast message showing storage path of saved file [CHAR LIMIT == 40, Single line]-->
    <string name="msg_toast_file_saved_to">File saved to: </string>
    <!--Header of the alert dialog asking or explaining about required permissions [CHAR LIMIT == 40, Single line]-->
    <string name="label_title_dialog_permission">Requires Permissions</string>
    <!--Text label of positive button for alert dialog asking or explaining about required permissions [CHAR LIMIT == 10, Single line]-->
    <string name="label_grant">Grant</string>
    <!--Text label of negative button for alert dialog asking or explaining about required permissions [CHAR LIMIT == 10, Single line]-->
    <string name="label_cancel">Cancel</string>
</resources>
